assembleDebug